cb/openshift-build-couchbase.yml
---
kind: Template
apiVersion: v1
metadata:
  name: sxapi-demo-openshift-couchbase-template
  annotations:
    openshift.io/display-name: SXAPI Demo Couchbase operator (Ephemeral)
    description: Template for building a full couchbase cluster (multi-node and services)
      using Openshift v3.7+ Operator component (experimental)
    iconClass: icon-database
    tags: startx,demo,couchbase
    openshift.io/provider-display-name: STARTX
    openshift.io/documentation-url: https://github.com/startxfr/sxapi-demo-openshift-couchbase/blob/test/README.md
    openshift.io/support-url: https://github.com/startxfr/sxapi-demo-openshift-couchbase/issues/new
message: Your couchbase demo stack started to be deployed in your project. You can
  use openshift console to observe deployment.
labels:
  template: sxapi-demo-openshift-couchbase-template
objects:
- kind: ImageStream
  apiVersion: v1
  metadata:
    name: couchbase-operator
    annotations:
      openshift.io/display-name: Couchbase operator
      openshift.io/generated-by: STARTX
    labels:
      base-image: couchbase-operator
      type: backend
      provider: startx
      template: sxapi-demo-openshift-couchbase-template
  spec:
    tags:
    - name: latest
      annotations:
        openshift.io/display-name: Couchbase operator (beta)
        description: Couchbase operator beta image relying on Kubernetes 1.7 or Openshift
          3.7
        iconClass: icon-couchbase
        version: beta
        sampleRepo: https://github.com/startxfr/docker-images-example-couchbase.git
      from:
        kind: DockerImage
        name: couchbase/k8s-operator:beta
- kind: Secret
  apiVersion: v1
  metadata:
    name: couchbase-auth
    labels:
      type: backend
      provider: startx
      template: sxapi-demo-openshift-couchbase-template
  stringData:
    username: "${COUCHBASE_USER}"
    password: "${COUCHBASE_PASSWORD}"
- kind: DeploymentConfig
  apiVersion: v1
  metadata:
    name: couchbase-operator
    generation: 2
    labels:
      type: backend
      provider: startx
      template: sxapi-demo-openshift-couchbase-template
    annotations:
      openshift.io/generated-by: STARTX
  spec:
    strategy:
      type: Rolling
      rollingParams:
        timeoutSeconds: 50
        maxUnavailable: 25%
        maxSurge: 25%
      resources: {}
    triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
        - couchbase-operator
        from:
          kind: ImageStreamTag
          name: couchbase-operator:latest
    - type: ConfigChange
    replicas: 1
    selector:
      app: couchbase-operator
      deploymentconfig: couchbase-operator
    template:
      metadata:
        labels:
          name: couchbase-operator
          app: couchbase-operator
          type: backend
          provider: startx
          template: sxapi-demo-openshift-couchbase-template
          deploymentconfig: couchbase-operator
        annotations:
          openshift.io/generated-by: STARTX
      spec:
        containers:
        - name: couchbase-operator
          image: " "
          ports:
          - containerPort: 8080
            name: readiness-port
          readinessProbe:
            httpGet:
              path: "/readyz"
              port: readiness-port
            initialDelaySeconds: 3
            timeoutSeconds: 2
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 19
- kind: Route
  apiVersion: v1
  metadata:
    name: couchbase-admin
    labels:
      app: couchbase
      couchbase_cluster: couchbase-node
      type: backend
      provider: startx
      template: sxapi-demo-openshift-couchbase-template
    annotations:
      openshift.io/generated-by: STARTX
  spec:
    to:
      kind: Service
      name: couchbase-node-ui
      weight: 100
    port:
      targetPort: cb-admin
- apiVersion: couchbase.database.couchbase.com/v1beta1
  kind: CouchbaseCluster
  metadata:
    clusterName: couchbase-cluster
    generation: 0
    name: couchbase-node
  spec:
    authSecret: couchbase-auth
    baseImage: couchbase/server
    buckets:
    - conflictResolution: seqno
      enableFlush: true
      enableIndexReplica: false
      ioPriority: high
      memoryQuota: 400
      name: "${COUCHBASE_BUCKET}"
      replicas: 1
      type: "${COUCHBASE_BUCKET_TYPE}"
    cluster:
      autoFailoverTimeout: 20
      dataServiceMemoryQuota: 800
      indexServiceMemoryQuota: 256
      indexStorageSetting: memory_optimized
      searchServiceMemoryQuota: 256
    exposeAdminConsole: true
    servers:
    - dataPath: "/opt/couchbase/var/lib/couchbase/data"
      indexPath: "/opt/couchbase/var/lib/couchbase/data"
      name: all_services
      services:
      - data
      - index
      - query
      size: 4
    version: "${CB_BASE_IMAGE_TAG}"
- kind: Job
  apiVersion: batch/v1
  metadata:
    name: couchbase-workload
    labels:
      job-name: couchbase-workload
  spec:
    parallelism: 1
    completions: 1
    backoffLimit: 6
    selector:
      matchLabels:
        job-name: couchbase-workload
    template:
      metadata:
        name: couchbase-workload
        creationTimestamp: 
        labels:
          job-name: couchbase-workload
      spec:
        containers:
        - name: couchbase-workload
          image: couchbase/server:${CB_BASE_IMAGE_TAG}
          command:
          - sleep 60;
          - cbworkloadgen
          - "-n"
          - "$COUCHBASE_NODE_UI_SERVICE_HOST:$COUCHBASE_NODE_UI_SERVICE_PORT_CB_ADMIN"
          - "-u"
          - Administrator
          - "-p"
          - Administrator123
          - "-r"
          - ".9"
          - "-i"
          - '1000000'
          - "-b"
          - default
          resources: {}
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: File
          imagePullPolicy: Always
          restartPolicy: Never
        restartPolicy: Never
        terminationGracePeriodSeconds: 30
        dnsPolicy: ClusterFirst
        securityContext: {}
        schedulerName: default-scheduler
parameters:
- name: CB_BASE_IMAGE_TAG
  displayName: Couchbase release
  description: Couchbase image release to use for buidling cluster nodes and job task
    (5.1.0, 5.5.0-Mar, 5.5.0-beta)
  value: 5.5.0-beta
  required: true
- name: COUCHBASE_USER
  displayName: Couchbase application user
  description: Database user to create
  value: Administrator
  from: "[A-Z0-9]{8}"
  generate: expression
  required: true
- name: COUCHBASE_PASSWORD
  displayName: Couchbase password
  description: Database password of the application user
  value: Administrator123
  from: "[A-Z0-9]{16}"
  generate: expression
  required: true
- name: COUCHBASE_BUCKET
  displayName: Couchbase bucket
  description: name of the bucket to create for example
  value: demo
  required: true
- name: COUCHBASE_BUCKET_TYPE
  displayName: Couchbase bucket type
  description: Bucket type for the couchabse bucket (ephemeral, couchbase or memcache)
  value: ephemeral
  required: true
